--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,7 @@
     background-repeat: no-repeat; /* Evita que el fondo se repita */
 }
 
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
+
+
